--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,10 +10,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout the Repo
       uses: actions/checkout@v4
@@ -21,9 +19,43 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
-    - name: Install dependencies
+        
+  restore:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+    - name: Checkout the Repo
+      uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore
       run: dotnet restore
+
+  build:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+    - name: Checkout the Repo
+      uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 6.0.x
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout the Repo
+      uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 6.0.x
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test
+
