--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
-        
+
   restore:
     runs-on: ubuntu-latest
     needs: setup
@@ -35,7 +35,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: restore
     steps:
     - name: Checkout the Repo
       uses: actions/checkout@v4
